[metadata]
name = pon
version = 1.0.0
description = lightwight text-based data-interchange format by and for Python programmers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/joedeveloper55/pon
author = Joseph P McAnulty
author_email = 'joedeveloper55@gmail.com'
classifiers = 
    License :: Other/Proprietary License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
python_requires='>=3.0'

[options]
py_modules = pon
